...
                builder: (final FormFieldState<bool?> field) {
                  // passing in the formKey state
                  return InputDecorator(
                    // the overall apperance of the widget
                    decoration: const InputDecoration(border: InputBorder.none),
                    child: CheckboxListTile(
                      key: const Key("exportAllBox"),
                      value: value,
                      // assigning its value based on the notifer value
                      onChanged: (final newValue) {
                        // newValue is the local value that the exportAllFields contains
                        notifier.value = newValue ?? false;
                        field.didChange(
                            newValue); // change the "all" field in formKey if checked
                      },
                      title: const Text(
                        "Export All Fields",
                        style: TextStyle(fontSize: 20),
                      ),
                    ),
                  );
                },
              );
...
