...
  @override
  Widget build(final BuildContext context) {
    return Row(
      children: [
        Checkbox(
          // initalization and overall apperance of checkbox
          key: const Key("nameOfPatientBox"),
          value: _isEnabled,
          onChanged: (final bool? value) {
            setState(() {
              _isEnabled = value ?? false;
              widget.formKey.currentState?.fields['nameOfPatient']
                  ?.didChange(null);
...
        Expanded(
          key: const Key("nameOfPatient"),
          child: FormBuilderDropdown(
            name: 'nameOfPatient',
            enabled: _isEnabled,
            decoration: const InputDecoration(
              labelText: 'Name Of Patient',
            ),
            items: nameOptions
                .map((final con) => DropdownMenuItem(
              // map each item in the list to be an option in the select box
                alignment: AlignmentDirectional.center,
                key: Key(con.replaceAll(',', "")),
...
