...
/// An enum which has the groupings for each image, displayName
/// is a user friendly name with spaces
enum PoseGroup {
  HEAD("${postureAssetsPath}head_3.png", "Head", "Head"),
  ELBOW_EXTENSION(
      "${postureAssetsPath}elbow_extension_2.png", "Elbow Extension", "Arm"),
  THORACIC("${postureAssetsPath}thoracic_3.png", "Thoracic", "Thorax"),
  HEAD_ANT("${postureAssetsPath}head_ant_3.png", "Head Anterior", "Head"),
  HIP_FLEX("${postureAssetsPath}hip_flex_2.png", "Hip Flex", "Hip"),
  KNEE_FLEX("${postureAssetsPath}hip_flex_2.png", "Knee Flex", "Leg"),
  LUMBAR("${postureAssetsPath}lumber_3.png", "Lumbar", "Thorax"),
  PELVIC("${postureAssetsPath}pelvic_3.png", "Pelvic", "Hip"),
  PELVIC_TILT("${postureAssetsPath}pelvic_tilt_3.png", "Pelvic Tilt", "Hip"),
...
